Fixed spacing bug in new header

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -112,7 +112,7 @@ footer {
 
 @media (min-width: 768px) {
   main {
-    padding-top: 8.453125rem;
+    padding-top: 8.025rem;
   }
 }
 
